<package>
  <name>mon_package</name>
  <version>0.9.0</version>
  <description>
    Mon_package à moi
  </description>
  
  <maintainer email="pierre@todo.todo">pierre</maintainer>

  <license>GPLv2</license>

  <author>Pierre Le Bihan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>libaria</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>libaria</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_srvs</run_depend>
  <!-- <test_depend>Aria</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>tf</test_depend> -->

  <export>

  </export>
</package>
